--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=shopmart
 #Add DB username and password
 spring.datasource.url=jdbc:postgresql://localhost:5432/final_project
 spring.datasource.username=postgres
-spring.datasource.password=1
+spring.datasource.password=pass
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
