--- a/pom.xml
+++ b/pom.xml
@@ -70,10 +70,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.stripe</groupId>-->
+<!--            <artifactId>stripe-java</artifactId>-->
+<!--            <version>22.13.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.stripe</groupId>
             <artifactId>stripe-java</artifactId>
-            <version>22.13.0</version>
+            <version>20.66.0</version>
         </dependency>
     </dependencies>
 
