--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=shopmart
+spring.application.name=back-end online-shopping 
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/final_project
