--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>backend-shopping-app</finalName>
     </build>
 
 </project>
